--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,11 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
+monitor_speed = 115200
+upload_speed = 115200
+upload_port = /dev/ttyUSB0
+
+
+lib_deps =
+    adafruit/DHT sensor library@^1.4.6
+    adafruit/Adafruit Unified Sensor@^1.1.15
