--- a/platformio.ini
+++ b/platformio.ini
@@ -13,10 +13,11 @@ platform = espressif32
 board = esp32dev
 framework = arduino
 monitor_speed = 115200
-upload_speed = 115200
+upload_speed = 460800
 upload_port = /dev/ttyUSB0
 
-
+build_flags = 
+    -DCORE_DEBUG_LEVEL=5
 lib_deps =
     adafruit/DHT sensor library@^1.4.6
     adafruit/Adafruit Unified Sensor@^1.1.15
