PIR sensor files correction

--- a/platformio.ini
+++ b/platformio.ini
@@ -18,6 +18,14 @@ upload_port = /dev/ttyUSB0
 
 build_flags = 
     -DCORE_DEBUG_LEVEL=5
+
+monitor_filters =
+    esp32_exception_decoder
+    log2file
+    colorize
+
+monitor_logfile = logs/esp32_log.txt
+
 lib_deps =
     adafruit/DHT sensor library@^1.4.6
     adafruit/Adafruit Unified Sensor@^1.1.15
